# students_system

./: CMakeLists.txt  README.md
My_include/: Classrooms  Classrooms.hpp  Schools  Schools.hpp  Students  Students.hpp  Teachers  Teachers.hpp  head
include/: Students
src/: Classrooms.cpp  Schools.cpp  Students.cpp  Teachers.cpp  main.cpp
